# True_North_Navigator

./: README.md
nav_systems_ws/src/true_north_calculator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nav_systems_ws/src/true_north_calculator/launch/: true_north_system.launch.py
nav_systems_ws/src/true_north_calculator/true_north_calculator/: core.py  magdec.py  time_utils.py  true_north_client.py  true_north_controller.py  true_north_manager.py  true_north_service.py
nav_systems_ws/src/true_north_interfaces/: CMakeLists.txt  package.xml
nav_systems_ws/src/true_north_interfaces/srv/: TrueNorthCalculation.srv
